# AutoClicker

./: .gitignore  1-团队员工说明.md  AGENTS.md  PRODUCT_REQUIREMENTS.md  PROJECT_OUTLINE.md  PROJECT_ROADMAP.md  PROJECT_STRUCTURE.md  README.md  REVIEW_LOG.md  SETUP_GUIDE.md  STAGE_TEST_PLAN.md  项目信心需求文档.md
.codex/agents/: 0-goal-alignment-monitor.md  1-project-lead.md  README.md  anti-hallucination.md  case-expert.md  code-explorer.md  doc-updater.md  handover.md  knowledge-expert.md  project-manager.md  realtime-checker.md  release-manager.md  requirement-certifier.md  test-engineer.md  ui-reference-analyst.md
my-automation-tool/: CURRENT_ACCEPTANCE.md  PROJECT_KNOWLEDGE.md  PROJECT_SPEC.md  PROJECT_TASKS.md  main.py  requirements-build.txt  requirements.txt
my-automation-tool/config/: ai_prompt.default.md  ai_prompt.default.txt  ai_prompt.md  ai_prompt.txt  game_keybinds.ini  global_hotkey.ini  quick_click.json  settings.json
my-automation-tool/docs/: ANTI_HALLUCINATION.md  GIT_GITHUB_CONNECTION.md  HANDOVER_GUIDE.md  LESSONS_LEARNED.md  MERGE_LOG.md  OSD_POPUP_REQUIREMENT.md  PROJECT_ROADMAP.md  SOUND_REFERENCE.md  STAGE_TEST_PLAN.md  USER_TEST_GUIDE.md  阶段2-最小需求规格.md  阶段3-Python宏规格.md
my-automation-tool/macros/: (一)剑切轴.py  (一)千咲合轴卡提.py  (一)夏空合轴千咲.py  (三)卡夏千9秒启动.py  (三)卡夏千剑切轴-废弃版本.py  (三)卡夏千剑切轴.py  (二)秧秧琳奈千咲.py  1234eqfR左键.py  1234eqf左键.py  123全切加大招_今汐.py  12eqr左键-今汐.py  12eqr左键_今汐.py  13EQFR左键.py  666.py  goodbye.py  新宏6.py  (+7 more)
my-automation-tool/native-replay/: BUILDING.md  Cargo.toml  THIRD_PARTY_NOTICES.md
my-automation-tool/native-replay/src/: audio.rs  main.rs
(+258 files in other folders)
